<resources>
    <string name="app_name">Composition</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="competition_of_number">Состав числа</string>
    <string name="next">Понятно</string>
    <string name="game_rules">Правила игры: перед вами будет три фигуры, две снизу и одна сверху,
        в двух из них будут числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу
        в верхней фигуре, для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7,
        в одном из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно
        быть число 3, потому что 3 + 4 = 7</string>
    <string name="choose_level">Выберите уровень:</string>
    <string name="level_test">Тестовый</string>
    <string name="level_easy">Лёгкий</string>
    <string name="level_normal">Средний</string>
    <string name="level_hard">Сложный</string>
    <string name="_00_00">00:00</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="icon_finish_game">icon which tell us it\'is victory or not</string>
    <string name="required_answers">Необходимое колличество правильных ответов: %s</string>
    <string name="percentage">Процент правильных ответов: %s</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="your_score">Ваш счёт: %s</string>
    <string name="try_again">Try again</string>
    <string name="question_mark">\?</string>
</resources>