<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="gameResult"
            type="com.raineyi.composition.domain.entity.GameResult" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.GameFinishedFragment">

        <ImageView
            android:id="@+id/im_result"
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/icon_finish_game"
            app:imageWinner="@{gameResult.winner}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/im_victory" />

        <TextView
            android:id="@+id/tv_required_answers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:textSize="18sp"
            app:requiredAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}"
            app:layout_constraintTop_toBottomOf="@+id/im_result"
            tools:text="@string/required_answers"/>

        <TextView
            android:id="@+id/tv_score"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:yourScore="@{gameResult.countOfRightAnswers}"
            app:layout_constraintTop_toBottomOf="@+id/tv_required_answers"
            tools:text="@string/your_score"/>

        <TextView
            android:id="@+id/tv_required_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:requiredPercent="@{gameResult.gameSettings.minPercentOfRightAnswers}"
            app:layout_constraintTop_toBottomOf="@+id/tv_score"
            tools:text="@string/required_percentage"/>

        <TextView
            android:id="@+id/tv_score_percentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:scorePercentage="@{gameResult}"
            app:layout_constraintTop_toBottomOf="@+id/tv_required_percentage"
            tools:text="@string/percentage"/>

        <Button
            android:id="@+id/bt_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/try_again"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>